@@ -51,13 +51,7 @@ host_modules= { module= fileutils; };
 host_modules= { module= findutils; };
 host_modules= { module= find; };
 host_modules= { module= fixincludes;
-		missing= info;
-		missing= dvi;
-		missing= pdf;
-		missing= TAGS;
-		missing= install-pdf;
-		missing= install-info;
-		missing= installcheck; };
+		missing= TAGS; };
 host_modules= { module= flex; no_check_cross= true; };
 host_modules= { module= gas; bootstrap=true; };
 host_modules= { module= gcc; bootstrap=true; 
